<resources>
    <string name="app_name">Mike\'s Disc Golf Tracker</string>
    <string name="course_editor_new_course_label">New Course</string>
    <string name="create_new_course">Create New Course</string>
    <string name="course_name_display">Course Name: </string>
    <string name="create_new_player">Create New Player</string>
    <string name="action_settings">Delete All Entries</string>
    <string name="banner_test_add_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admobID">ca-app-pub-3693522296743727~1588497542</string>
    <string name="courseEditorBannerAd">ca-app-pub-3693522296743727/8616940325</string>
    <string name="finishedSCBannerAd">ca-app-pub-3693522296743727/3129697979</string>
    <string name="mainMenuBottomAd">ca-app-pub-3693522296743727/3568681671</string>
    <string name="playerEditorBannerAd">ca-app-pub-3693522296743727/8573596342</string>
    <string name="unfinishedSCBannerAd">ca-app-pub-3693522296743727/1859960283</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="export_to_excel">Export to Excel</string>
    <string name="NO_GAMES_FOUND">Oops! No finished games here!</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_main_menu">Main Menu</string>
    <string name="title_new_course">New Course</string>
    <string name="save">Save</string>
    <string name="number_of_holes">Number of holes</string>
    <string name="default_hole_count">18</string>
    <string name="hole_count">%d</string>
    <string name="invalid_course_name_exception">Not a valid course name! Try again!</string>
    <string name="course_name_already_exists_exception">Course: %s exists already.</string>
    <string name="alpha_numeric_text_only">*Alpha-Numeric Text Only</string>
    <string name="name_label">Name:</string>
    <string name="invalid_user_exception">Invalid input or duplicate user. Please try again.</string>
    <string name="edit_players_header">Edit Players</string>
    <string name="new_player">New Player</string>
    <string name="no_players_found_message">Oops! No players here yet!\nPlease add some players.</string>
    <string name="deletePrompt">Delete?</string>
    <string name="delete_confirmation_question">Are you sure you want to delete %s?</string>
    <string name="delete_button">Delete</string>
    <string name="player_already_exists">Player: %s exists already</string>
</resources>
